--- a/VB_Snippets/VB_Snippets/VB_Snippets.vbproj
+++ b/VB_Snippets/VB_Snippets/VB_Snippets.vbproj
@@ -82,6 +82,7 @@
   <ItemGroup>
     <Compile Include="CodeTester.vb" />
     <Compile Include="CPU Example.vb" />
+    <Compile Include="SQL Database Exists.vb" />
     <Compile Include="frmMainSelectionForm.Designer.vb">
       <DependentUpon>frmMainSelectionForm.vb</DependentUpon>
     </Compile>
