Create Database and Table Example

--- a/VB_Snippets/VB_Snippets/VB_Snippets.vbproj
+++ b/VB_Snippets/VB_Snippets/VB_Snippets.vbproj
@@ -82,6 +82,8 @@
   <ItemGroup>
     <Compile Include="CodeTester.vb" />
     <Compile Include="CPU Example.vb" />
+    <Compile Include="SQL Create Database Example.vb" />
+    <Compile Include="SQL Create Table Example.vb" />
     <Compile Include="SQL Database Exists.vb" />
     <Compile Include="frmMainSelectionForm.Designer.vb">
       <DependentUpon>frmMainSelectionForm.vb</DependentUpon>
@@ -114,7 +116,7 @@
     <Compile Include="SQL Update Example.vb" />
     <Compile Include="SQL Write Example.vb" />
     <Compile Include="StopWatch Example.vb" />
-    <Compile Include="TableExists.vb" />
+    <Compile Include="SQL Table Exists Example.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="frmMainSelectionForm.resx">
