Added some new Examples

--- a/VB_Snippets/VB_Snippets/VB_Snippets.vbproj
+++ b/VB_Snippets/VB_Snippets/VB_Snippets.vbproj
@@ -82,6 +82,8 @@
   <ItemGroup>
     <Compile Include="CodeTester.vb" />
     <Compile Include="CPU Example.vb" />
+    <Compile Include="File Read Example.vb" />
+    <Compile Include="File Write Example.vb" />
     <Compile Include="SQL Create Database Example.vb" />
     <Compile Include="SQL Create Table Example.vb" />
     <Compile Include="SQL Database Exists.vb" />
@@ -117,6 +119,8 @@
     <Compile Include="SQL Write Example.vb" />
     <Compile Include="StopWatch Example.vb" />
     <Compile Include="SQL Table Exists Example.vb" />
+    <Compile Include="WEB Search Web Page Data.vb" />
+    <Compile Include="WEB Get Web Page.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="frmMainSelectionForm.resx">
